[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["abbasguliyev <abbasquliyev111@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.97.0"}
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
